# capdag-interop-tests

./: .gitignore  Makefile  pyproject.toml  show_throughput_matrix.py  test.sh  version.txt
src/capdag_interop/hosts/go-relay/: go.mod
src/capdag_interop/hosts/rust-relay/src/: main.rs
src/capdag_interop/plugins/go/: go.mod  main.go
src/capdag_interop/plugins/python/: plugin.py
src/capdag_interop/plugins/rust/: Cargo.toml
src/capdag_interop/plugins/rust/src/: main.rs
src/capdag_interop/plugins/swift/Sources/: main.swift
src/capdag_interop/routers/rust/: Cargo.toml
src/capdag_interop/routers/rust/src/: main.rs
src/capns_interop/plugins/python/: plugin.py
tests/: conftest.py  test_multi_master_routing.py
