[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capdag-interop-tests"
version = "0.101.31503"
description = "Interoperability testing framework for capdag implementations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "capdag>=0.89.35812",
    "tagged-urn>=0.13.2996",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
